--- a/practica2/index.html
+++ b/practica2/index.html
@@ -13,8 +13,10 @@
         <a href="./actividad3.html">Actividad 3</a>
         <a href="./actividad4.html">Actividad 4</a>
         <a href="./actividad5.html">Actividad 5</a>
-        <a href="./actividad6y7.html">Actividad 6 y 7</a>
+        <a href="./actividad6.html">Actividad 6</a>
+        <a href="./actividad7.html">Actividad 7</a>
         <a href="./actividad8.html">Actividad 8</a>    
+        <a href="./actividad9.html">Actividad 9</a>
     </div>
 </body>
 </html>
